--- a/.gitignore
+++ b/.gitignore
@@ -1,74 +1,16 @@
-# Windows:
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# Mac-specific directory that no other operating system needs.
-.DS_Store
-
-# IntelliJ project files
-.idea
-*.iml
-out
-gen
-*~
-bower_components
-
-# vs
-.vscode
-
-# Java
-*.class
-hs_err_pid*
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-*.log
-*.err
-
-# Maven
-target/
-**/target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-# Eclipse project files
-.project
-.classpath
-.settings
-[Bb]in/
-
-# Composer #
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
 /vendor
-
-# PhpCsFixer #
-.php-cs-fixer.cache
-.phpunit.result.cache
-
-# Package Files #
-**/Runtime/
-**/nbproject/private/
-thinkphp
-runtime
-
-# API Doc #
-apidocs
-/uhouzz/docs
-/uhomes/docs
-
-# Local Config #
 .env
-.env-prod
-.env-pre
-.env-testing
-
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/.idea
+/.vscode
+/test-apps
