--- a/composer.json
+++ b/composer.json
@@ -1,71 +1,62 @@
 {
-  "name": "bojian69/laravel-migration",
-  "description": "laravel database migration",
-  "type": "project",
-  "keywords": [
-    "laravel",
-    "database migration"
-  ],
-  "authors": [
-    {
-      "name": "bojian.li",
-      "email": "13611032162@163.com"
-    }
-  ],
-  "require": {
-    "php": "^8.2",
-    "ext-json": "*",
-    "ext-intl": "*",
-    "laravel/framework": "^12.0",
-    "laravel/sanctum": "^3.0",
-    "laravel/tinker": "^3.0"
-  },
-  "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.0",
-    "phpstan/phpstan": "^1.0",
-    "phpunit/phpunit": "^10.0",
-    "nunomaduro/collision": "^7.0"
-  },
-  "autoload": {
-    "psr-4": {
-      "App\\": "app/",
-      "Database\\Factories\\": "database/factories/",
-      "Database\\Seeders\\": "database/seeders/"
-    }
-  },
-  "autoload-dev": {
-    "psr-4": {
-      "Tests\\": "tests/"
-    }
-  },
-  "extra": {
-    "laravel": {
-      "dont-discover": []
-    }
-  },
-  "config": {
-    "preferred-install": "dist",
-    "sort-packages": true,
-    "optimize-autoloader": true
-  },
-  "scripts": {
-    "post-autoload-dump": [
-      "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-      "@php artisan package:discover --ansi"
-    ],
-    "post-root-package-install": [
-      "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
-    ],
-    "post-create-project-cmd": [
-      "@php artisan key:generate --ansi"
-    ],
-    "prod": "composer install --optimize-autoloader --no-dev -v",
-    "test": "vendor/bin/phpunit",
-    "test-ci": "vendor/bin/phpunit --coverage-text",
-    "php-cs-fixer": "vendor/bin/php-cs-fixer fix -v",
-    "phpstan": "vendor/bin/phpstan analyse --memory-limit=-1",
-    "fixer": "php-cs-fixer fix ./"
-  },
-  "minimum-stability": "stable",
-  "prefer-stable": true
+    "name": "bojian69/laravel-migration",
+    "type": "project",
+    "description": "laravel database migration.",
+    "keywords": ["framework", "laravel", "database migration"],
+    "license": "MIT",
+    "require": {
+        "php": "^7.3|^8.0",
+        "fruitcake/laravel-cors": "^2.0",
+        "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/framework": "^8.75",
+        "laravel/sanctum": "^2.11",
+        "laravel/tinker": "^2.5"
+    },
+    "require-dev": {
+        "facade/ignition": "^2.5",
+        "fakerphp/faker": "^1.9.1",
+        "laravel/sail": "^1.0.1",
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^5.10",
+        "phpunit/phpunit": "^9.5.10"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "app/",
+            "Database\\Factories\\": "database/factories/",
+            "Database\\Seeders\\": "database/seeders/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "scripts": {
+        "post-autoload-dump": [
+            "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
+            "@php artisan package:discover --ansi"
+        ],
+        "post-update-cmd": [
+            "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
+        ],
+        "post-root-package-install": [
+            "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "post-create-project-cmd": [
+            "@php artisan key:generate --ansi"
+        ]
+    },
+    "extra": {
+        "laravel": {
+            "dont-discover": []
+        }
+    },
+    "config": {
+        "optimize-autoloader": true,
+        "preferred-install": "dist",
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
